Update focusing and nav items

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -3,7 +3,7 @@
     <strong class="{{include.titleSize}} font-alt">The Hub & Rebound</strong>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}}" href="tel:{{site.data.site.tel}}">
+    <a class="{{include.aClass}} inline-block" href="tel:{{site.data.site.tel}}">
       <span class="icon-label push-r-1-2">{{site.data.site.telDisplay}}</span>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#phone" /></svg>
@@ -11,7 +11,7 @@
     </a>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}}" href="mailto:{{site.data.site.email}}">
+    <a class="{{include.aClass}} inline-block" href="mailto:{{site.data.site.email}}">
       <span class="icon-label push-r-1-2">{{site.data.site.email}}</span>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#email" /></svg>
@@ -19,7 +19,7 @@
     </a>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}} no-wrap" href="{{site.data.site.hubContact.mapLink}}" target="_blank">
+    <a class="{{include.aClass}} inline-block no-wrap" href="{{site.data.site.hubContact.mapLink}}" target="_blank">
       <address class="icon-label push-r-1-2">{{site.data.site.hubContact.addressLine1}}, {{site.data.site.hubContact.addressLine2}}</address>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#location" /></svg>
