--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -20,14 +20,25 @@
   display: inline-block;
   z-index: 10000;
   position: relative;
+  transition: color var(--transition-primary);
 }
 
 .nav-light-items .logo {
   color: #fff;
 }
 
+.nav-light-items .logo:hover,
+.nav-light-items .logo-wrap:focus .logo {
+  color: var(--color-primary);
+}
+
 .sticky.nav-light-items .logo {
   color: var(--color-primary);
+}
+
+.sticky.nav-light-items .logo:hover,
+.sticky.nav-light-items .logo-wrap:focus .logo {
+  color: var(--color-primary-light);
 }
 
 .nav .nav-items a:not(.btn) {
@@ -88,6 +99,9 @@
   width: calc(100% - 2.6rem);
 }
 
+.subnav-icon {
+  display: none;
+}
 
 @media only screen and (max-width: 37.999em) {
 
@@ -125,12 +139,14 @@
   }
 
   .nav .nav-items a:not(.btn) {
-    color: var(--color-primary);
+    color: #fff;
   }
 
-  .nav .nav-items a:not(.btn):hover {
+  .subnav-icon:hover + a,
+  .subnav-icon:focus + a,
+  .nav .nav-items a:not(.btn):hover,
+  .nav .nav-items a:not(.btn):focus {
     background-color: var(--color-primary);
-    color: var(--color-secondary);
   }
 
   .nav .nav-items .btn {
@@ -138,13 +154,18 @@
 
   }
 
-  .nav .nav-items .btn:hover {
+  .nav .nav-items .btn:hover,
+  .nav .nav-items .btn:focus {
     background-color: #fff;
     border-color: #fff;
     color: var(--color-secondary);
   }
 
   /* ---------- SubNav ---------- */
+
+  .subnav-wrap {
+    position: relative;
+  }
 
   .subnav {
     max-height: 0;
@@ -161,14 +182,34 @@
     padding: 1.3rem;
     display: block;
     background-color: var(--color-primary);
-    color: var(--color-secondary);
+    color: #fff;
+    border-top: 1px solid var(--color-secondary);
     border-bottom: 1px solid var(--color-secondary);
   }
 
-  .nav .nav-items .subnav a:not(.btn):hover {
-    color: var(--color-primary);
+  .nav .nav-items .subnav li:first-child a:not(.btn) {
+    border-top: 2px solid var(--color-secondary);
+  }
+
+  .nav .nav-items .subnav a:not(.btn):hover,
+  .nav .nav-items .subnav a:not(.btn):focus {
     background-color: var(--color-secondary);
     border-color: var(--color-primary);
+  }
+
+  .subnav-icon {
+    position: absolute;
+    right: 50%;
+    transform: translatex(320%) rotate(90deg);
+    top: 1.3rem;
+    padding: 0!important;
+    z-index: 1;
+    display: inline-block;
+  }
+
+  .subnav-icon:hover,
+  .subnav-icon:focus {
+    background-color: transparent!important;
   }
 
 }
@@ -238,7 +279,10 @@
   /* ---------- SubNav ---------- */
 
   .subnav-label:hover + .subnav ol,
-  .subnav:hover ol {
+  .subnav-label:focus + .subnav ol,
+  .subnav:hover ol,
+  .subnav:focus ol,
+  .subnav.open ol {
     max-height: 160px;
   }
 
@@ -268,7 +312,8 @@
     padding: .35rem .7rem;
   }
 
-  .nav .nav-items .subnav a:not(.btn):hover {
+  .nav .nav-items .subnav a:not(.btn):hover,
+  .nav .nav-items .subnav a:not(.btn):focus {
     background-color: var(--color-primary);
     color: #fff;
   }
