--- a/_includes/news-events-prev.html
+++ b/_includes/news-events-prev.html
@@ -4,7 +4,7 @@
       <h2 class="gutter push-0">News & Events</h2>
     </div>
     <div class="unit [ xs-1 m-1-2 ] news-view-all gutter">
-      <a href="{{site.baseurl}}/news-events/">
+      <a class="inline-block" href="{{site.baseurl}}/news-events/">
         <div class="inline-block valign-top">
           <span class="valign-middle inline-block bold mega">View all News & Events</span>
         </div>
