--- a/_includes/sponsor-bar.html
+++ b/_includes/sponsor-bar.html
@@ -1,5 +1,5 @@
 <div id="sponsor-bar" class="anchor"></div>
-<div class="sponsor-bar text-center pad-t-b-2">
+<section class="sponsor-bar text-center pad-t-b-2" tabindex="0">
   <h2 class="max-length gutter">Our Sponsors</h2>
   <p class="max-length gutter">The Hub, Rebound, and all of the rest of our services would not be possible without the generous support from our sponsors:</p>
   <div class="grid grid-h-center grid-stretch island-1-2 wrapper">
@@ -12,4 +12,4 @@
       </div>
     {% endfor %}
   </div>
-</div>
+</section>
