--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -2,7 +2,7 @@
   <li class="push-r icon-list-title">
     <p class="milli push-0">Follow The Hub & Rebound on social media!</p>
   </li>
-  {% for mediaIcons in site.data.social-media %}
+  {% for mediaIcons in site.data.social-media.social-media %}
     <li class="push-r">
       <a class="inline-block" href="{{mediaIcons.link}}" target="_blank">
         <i class="icon i-1">
