--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -307,6 +307,14 @@ input.dollar-input {
   top: -3.590625rem;
 }
 
+.paypal-form input {
+  width: 100%;
+  max-width: 15rem;
+  height: auto!important;
+  background-color: transparent;
+  border: 0;
+}
+
 
 @media only screen and (min-width: 38em) {
 
