Update contact info in CMS

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -19,8 +19,8 @@
     </a>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}} inline-block no-wrap" href="{{site.data.site.hubContact.mapLink}}" target="_blank">
-      <address class="icon-label push-r-1-2">{{site.data.site.hubContact.addressLine1}}, {{site.data.site.hubContact.addressLine2}}</address>
+    <a class="{{include.aClass}} inline-block no-wrap" href="{{site.data.site.mapLink}}" target="_blank">
+      <address class="icon-label push-r-1-2">{{site.data.site.addressLine1}}, {{site.data.site.addressLine2}}</address>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#location" /></svg>
       </i>
