--- a/_includes/hours-block.html
+++ b/_includes/hours-block.html
@@ -13,6 +13,14 @@
       <span class="no-wrap">{{hours.storeAddress2}}</span>
     </address>
   </a>
+  <a class="push media-flex" href="tel:{{hours.tel}}">
+    <div>
+      <i class=" media-flex-img icon i-1 push-r-1-4">
+        <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#phone" /></svg>
+      </i>
+    </div>
+    <p class="media-flex-body bold">{{hours.telDisplay}}</p>
+  </a>
   <div class="stretch-rows pad-t-1-2">
     <div class="row">
       <p class="stretch bold push-1-2">Monday:</p>
