--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <meta name="twitter:description" content="{% if page.layout == 'main' %}{{site.data.pages.[page.pageName].metaDesc}}{% else %}{{page.meta}}{% endif %}">
   <meta name="twitter:image" content="https://thehubalmonte.com/images/news/reno-front.jpg">
   <!-- CSS -->
-  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/main.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/xqk1pkz.css">
   <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/>
