--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,13 @@
   <link rel="stylesheet" href="https://use.typekit.net/xqk1pkz.css">
   <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/>
 </head>
+<!--[if IE]>
+    <style>
+      h1 {
+        color: green!important;
+      }
+    </style>
+<![endif]-->
 <body class="{{page.pageClass}}">
   <ul class="skip-links">
     <li><a href="#main">Jump to main content</a></li>
