Browser specific test 2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/xqk1pkz.css">
   <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/>
 </head>
-<!--[if IE]>
+<!--[if gte IE 7]>
     <style>
       h1 {
         color: green!important;
