Browser specific test 3

--- a/css/common.css
+++ b/css/common.css
@@ -361,3 +361,11 @@ input.dollar-input {
   }
 
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  h1 {
+    color: green;
+  }
+}
+ Internet Explorer/Edge ≥ 10
+#
