Add thank you page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <meta property="og:title" content="{% if page.title %}{{page.title}} · {% endif %}The Hub Almonte">
   <meta property="og:url" content="https://thehubalmonte.com">
   <meta property="og:image" content="https://thehubalmonte.com/images/news/reno-front.jpg">
-  <meta property="og:site_name" content="Adam Robillard">
+  <meta property="og:site_name" content="The Hub Almonte">
   <meta property="og:description" content="{% if page.layout == 'main' %}{{site.data.pages.[page.pageName].metaDesc}}{% else %}{{page.meta}}{% endif %}">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary">
