--- a/_includes/news-events-prev.html
+++ b/_includes/news-events-prev.html
@@ -24,7 +24,7 @@
           </div>
           <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
             <h3 class="giga push-1-2 text-secondary">{{news.title}}</h3>
-            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
+            <p class="content-fill text-secondary push-0">{{news.meta | truncate: 120 }}</p>
             <span class="hyperlink">Read more...</span>
           </div>
         </a>
@@ -42,7 +42,7 @@
             <p class="push-0 bold">{{news.eventDate}}</p>
             <p class="text-secondary push-0 bold">{{news.eventTime}}</p>
             <p class="text-secondary push-1-2 bold">{{news.eventLocation}}</p>
-            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
+            <p class="content-fill text-secondary push-0">{{news.meta | truncate:70}}</p>
             <span class="hyperlink">Learn more...</span>
           </div>
         </a>
