Make charitable status editable

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="{{include.navClass}}" role="navigation">
+<nav id="{{include.navId}}" class="{{include.navClass}}" role="navigation">
   <ul class="{{include.ulClass}}">
     <li class="{{include.liClass}}">
       <a class="{{include.aLogo}} logo-wrap" href="{{site.baseurl}}/">
